{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1750,
  "lineage": "be709d95-fcc1-0796-a990-f66965aaf7dd",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic1-terraform",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/7f35440c7b207082",
            "arn_suffix": "app/example/7f35440c7b207082",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-1545578728.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/7f35440c7b207082",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0304e845326e27692",
              "sg-04a1c2f5564459bfd",
              "sg-08bd0ca6f28926514"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004cc20a7a58b5740"
              },
              {
                "subnet_id": "subnet-0cc10ae794f6f3901"
              }
            ],
            "subnets": [
              "subnet-004cc20a7a58b5740",
              "subnet-0cc10ae794f6f3901"
            ],
            "vpc_id": "vpc-09cf75fd9c81d3d96",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/02c6f2705a05da68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTP』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/02c6f2705a05da68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/7f35440c7b207082",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.example",
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/34371b4f5d8ce7f4",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:730054542356:certificate/f0c03492-9d66-4496-af55-c2870ce1f05a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTPS』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/34371b4f5d8ce7f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/7f35440c7b207082",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_acm_certificate.example",
            "module.loadbalancer.aws_acm_certificate_validation.example",
            "module.loadbalancer.aws_lb.example",
            "module.loadbalancer.aws_route53_record.example",
            "module.loadbalancer.aws_route53_record.example_certificate",
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.data.aws_route53_zone.example",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/0911edd71d0d97c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/0911edd71d0d97c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/7f35440c7b207082",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.example",
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/16331b97f07e0c33",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/7f35440c7b207082/34371b4f5d8ce7f4/f80a3be09acb2586",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/7f35440c7b207082/34371b4f5d8ce7f4/f80a3be09acb2586",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/7f35440c7b207082/34371b4f5d8ce7f4",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_acm_certificate.example",
            "module.loadbalancer.aws_acm_certificate_validation.example",
            "module.loadbalancer.aws_lb.example",
            "module.loadbalancer.aws_lb_listener.https",
            "module.loadbalancer.aws_lb_target_group.example",
            "module.loadbalancer.aws_route53_record.example",
            "module.loadbalancer.aws_route53_record.example_certificate",
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.data.aws_route53_zone.example",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/16331b97f07e0c33",
            "arn_suffix": "targetgroup/example/16331b97f07e0c33",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/16331b97f07e0c33",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb.example",
            "module.loadbalancer.aws_s3_bucket.alb_log",
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0304e845326e27692",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0304e845326e27692",
            "ingress": [],
            "name": "http_redirect_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-957034204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0304e845326e27692",
            "security_group_rule_id": "sgr-06a9e6efd596e5ef3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3088238835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0304e845326e27692",
            "security_group_rule_id": "sgr-01734875ffbd684c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.http_redirect_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-04a1c2f5564459bfd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04a1c2f5564459bfd",
            "ingress": [],
            "name": "http_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-72453961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04a1c2f5564459bfd",
            "security_group_rule_id": "sgr-0bd057b7e699be366",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2166192756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a1c2f5564459bfd",
            "security_group_rule_id": "sgr-0c7197823d6a6cf0e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.http_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-08bd0ca6f28926514",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08bd0ca6f28926514",
            "ingress": [],
            "name": "https_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2346373536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08bd0ca6f28926514",
            "security_group_rule_id": "sgr-0613ef7ba8788378b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1556642039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bd0ca6f28926514",
            "security_group_rule_id": "sgr-0eeb28bebea62bcf0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.https_sg.aws_security_group.default",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0239aa3aaa4cfbe06",
            "domain": "vpc",
            "id": "eipalloc-0239aa3aaa4cfbe06",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-180-216-56.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.216.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096e991c7e6aa0411",
            "domain": "vpc",
            "id": "eipalloc-096e991c7e6aa0411",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-180-121-233.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.121.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1c42a2362458fc",
            "domain": "vpc",
            "id": "eipalloc-0ed1c42a2362458fc",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-95-68-216.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.68.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:internet-gateway/igw-080313387945e1190",
            "id": "igw-080313387945e1190",
            "owner_id": "730054542356",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0239aa3aaa4cfbe06",
            "association_id": "eipassoc-008cf5830801dd54b",
            "connectivity_type": "public",
            "id": "nat-02c1a34e249ca7bb6",
            "network_interface_id": "eni-0acb13f1ab901d9d4",
            "private_ip": "10.0.0.188",
            "public_ip": "57.180.216.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e4bff8ef77289af"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_subnet.public",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096e991c7e6aa0411",
            "association_id": "eipassoc-04eb7cd9016c45b7e",
            "connectivity_type": "public",
            "id": "nat-01fdd8623b6c2f485",
            "network_interface_id": "eni-00af5e75212d8e4ec",
            "private_ip": "10.0.1.26",
            "public_ip": "57.180.121.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004cc20a7a58b5740"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway_0",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1c42a2362458fc",
            "association_id": "eipassoc-0f2143bf143c9899d",
            "connectivity_type": "public",
            "id": "nat-0723a7cd75fb15b7a",
            "network_interface_id": "eni-04ae428a6d6e0a4c1",
            "private_ip": "10.0.2.80",
            "public_ip": "54.95.68.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc10ae794f6f3901"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway_1",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a36604cedeca18ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c1a34e249ca7bb6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a36604cedeca18ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_nat_gateway.example",
            "module.loadbalancer.module.vpc.aws_route_table.private",
            "module.loadbalancer.module.vpc.aws_subnet.public",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062c0637519d4995a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01fdd8623b6c2f485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062c0637519d4995a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway_0",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_nat_gateway.nat_gateway_0",
            "module.loadbalancer.module.vpc.aws_route_table.private_0",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083b0380799bf46251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0723a7cd75fb15b7a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083b0380799bf4625",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_eip.nat_gateway_1",
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_nat_gateway.nat_gateway_1",
            "module.loadbalancer.module.vpc.aws_route_table.private_1",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080313387945e1190",
            "id": "r-rtb-02d600c8b70fbe7121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d600c8b70fbe712",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_internet_gateway.example",
            "module.loadbalancer.module.vpc.aws_route_table.public",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0a36604cedeca18ac",
            "id": "rtb-0a36604cedeca18ac",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-062c0637519d4995a",
            "id": "rtb-062c0637519d4995a",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-083b0380799bf4625",
            "id": "rtb-083b0380799bf4625",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-02d600c8b70fbe712",
            "id": "rtb-02d600c8b70fbe712",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca02d9e75955bc20",
            "route_table_id": "rtb-0a36604cedeca18ac",
            "subnet_id": "subnet-0cfc671d80c15a4ad"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.private",
            "module.loadbalancer.module.vpc.aws_subnet.private",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c36e89c186903ed0",
            "route_table_id": "rtb-062c0637519d4995a",
            "subnet_id": "subnet-0f516696a55925556"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.private_0",
            "module.loadbalancer.module.vpc.aws_subnet.private_0",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155b92d71e12d035",
            "route_table_id": "rtb-083b0380799bf4625",
            "subnet_id": "subnet-0ac24e49ec7b5fe84"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.private_1",
            "module.loadbalancer.module.vpc.aws_subnet.private_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0103dfe9e832a9",
            "route_table_id": "rtb-02d600c8b70fbe712",
            "subnet_id": "subnet-06e4bff8ef77289af"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.public",
            "module.loadbalancer.module.vpc.aws_subnet.public",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00df016578475f428",
            "route_table_id": "rtb-02d600c8b70fbe712",
            "subnet_id": "subnet-004cc20a7a58b5740"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.public",
            "module.loadbalancer.module.vpc.aws_subnet.public_0",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53008dbc3aacef8",
            "route_table_id": "rtb-02d600c8b70fbe712",
            "subnet_id": "subnet-0cc10ae794f6f3901"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_route_table.public",
            "module.loadbalancer.module.vpc.aws_subnet.public_1",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-06d73097160826a01",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06d73097160826a01",
            "ingress": [],
            "name": "example",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3097306730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06d73097160826a01",
            "security_group_rule_id": "sgr-05baaded464235675",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_security_group.example",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2546643622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d73097160826a01",
            "security_group_rule_id": "sgr-05343ccdcbd1c9018",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_security_group.example",
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0cfc671d80c15a4ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfc671d80c15a4ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0f516696a55925556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f516696a55925556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0ac24e49ec7b5fe84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac24e49ec7b5fe84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-06e4bff8ef77289af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e4bff8ef77289af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-004cc20a7a58b5740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004cc20a7a58b5740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0cc10ae794f6f3901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc10ae794f6f3901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:vpc/vpc-09cf75fd9c81d3d96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1d3486e7548ea35",
            "default_route_table_id": "rtb-0aee0feadf0f51553",
            "default_security_group_id": "sg-0fa2e2c080f359d47",
            "dhcp_options_id": "dopt-0180ecb3fda502724",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cf75fd9c81d3d96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aee0feadf0f51553",
            "owner_id": "730054542356",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-05fccf7e499c202b0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05fccf7e499c202b0",
            "ingress": [],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4023699611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05fccf7e499c202b0",
            "security_group_rule_id": "sgr-0c0d33717c05ca535",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example",
            "module.loadbalancer.module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer.module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1441805127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fccf7e499c202b0",
            "security_group_rule_id": "sgr-0f54193c2cd77be38",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example",
            "module.loadbalancer.module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-00a07f43e75e85c47",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00a07f43e75e85c47",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09cf75fd9c81d3d96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3297100285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00a07f43e75e85c47",
            "security_group_rule_id": "sgr-0d630af15b2b54a8b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-186933116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a07f43e75e85c47",
            "security_group_rule_id": "sgr-0d94579e2107fb1da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.module.vpc.aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}